fixed dark mode and kimora hover

--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,9 @@ html {
 }
 
 .cardDark {
-    box-shadow: 0px 0px 59px -8px rgba(0,0,0,0.75);
     transition: 0.3s;
-    width: 500px;
+    width: 300px;
     border-radius: 10px;
-    background: #1b1a1a;
-    
 }
 
   
@@ -242,7 +239,7 @@ html {
     text-align: center;
     letter-spacing: 4px;
     font-family: raleway;
-    font-size: 0.9em;
+    font-size: 0.65em;
     font-style: bold;
     padding-left: auto;
     padding-right: auto;
